--- a/mydemo/配置文件/功率校准.conf
+++ b/mydemo/配置文件/功率校准.conf
@@ -2,6 +2,8 @@
 
 ######################### 以下配置请运行前确认 #########################
 # 目标设备信息
+[yield_type]
+type=4
 [dut]
 # 本机电脑ip
 local_ip=10.60.0.93
